@@ -59,7 +59,7 @@ AH_BOTTOM([
 dnl
 dnl AC_CONFIG_AUX_DIR(m4)
 AC_PREREQ(2.52)
-AC_REVISION($Revision: 1.98 $)
+AC_REVISION($Revision: 1.99 $)
 AC_COPYRIGHT([Copyright (c) 1997-2005 Erez Zadok])
 dnl find out system type
 AC_MSG_NOTICE(*** SYSTEM TYPES ***)
@@ -707,6 +707,7 @@ dnl ======================================================================
 dnl Generic Typedef Checks
 AC_MSG_NOTICE(*** GENERIC TYPEDEFS ***)
 AMU_TYPE_TIME_T
+AMU_TYPE_RPCVERS_T
 AMU_CHECK_FHANDLE
 AMU_CHECK_MTYPE_TYPE
 AMU_CHECK_MTYPE_PRINTF_TYPE
